<resources>
    <string name="app_name">ReminderApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings_set_username">Set username</string>
    <string name="save">Save</string>
    <string name="hint">Set or edit username</string>
    <string name="select_color">Select color:</string>
    <string name="click_select_color"> Click here to select the circle color</string>
    <string name="alarm_name">Name of the alarm</string>
    <string name="alarm_time">Select the alarm time</string>
    <string name="hour">Hour:</string>
    <string name="min">Min:</string>
    <string name="sec">Sec:</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="appName">Simple alarm application</string>
    <string name="yes">Yes</string>
    <string name="deleteText">Are your sure you want to delete?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
