<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.SettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/settings_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/username_save"
            android:text="@string/settings_set_username"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/settings_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:ems="13"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:layout_below="@+id/settings_username_text"
            android:layout_centerHorizontal="true"
            android:padding="3dp"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/username_save"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

</FrameLayout>